--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,18 +1,6 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
-  @for (user of users; track user.id) {
-    <li>
-      {{user.id}} - {{user.userName}}
-    </li>
-  }
+<div class="container" style="margin-top: 100px;">
+  <app-home></app-home>
+</div>
 
-</ul>
-
-<ul>
-  @for (player of players; track player.id) {
-    <li>
-      {{player.id}} - {{player.playerName}}
-    </li>
-  }
-</ul>
