--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,24 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Ag18Ted App</a>
+    <a class="navbar-brand" routerLink="/" >TedsDev App</a>
 
-    @if (accountService.currentUser()) {
+
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link">Members</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">List</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Messages</a>
-        </li>
+        @if (accountService.currentUser()) {
+            <li class="nav-item">
+              <a routerLink="/about" routerLinkActive="active" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/members" routerLinkActive="active" class="nav-link">Members</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/players" routerLinkActive="active" class="nav-link">Players</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/games" routerLinkActive="active" class="nav-link">Games</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/lotteries" routerLinkActive="active" class="nav-link">lotteries</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/lists" routerLinkActive="active" class="nav-link">List</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+            </li>
+      }
       </ul>
-    }
 
     @if (accountService.currentUser()) {
       <div dropdown class="dropdown">
-        <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Wecome user</a>
+        <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+          Wecome {{accountService.currentUser()?.username | titlecase}}
+        </a>
         <div *dropdownMenu class="dropdown-menu">
           <a class="dropdown-item">Edit profile</a>
           <div class="dropdown-divider"></div>
@@ -47,7 +62,7 @@
           placeholder="Password"
           type="password"
         />
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
     }
   </div>
