End of section 9+

--- a/client/src/app/players/player-start/player-start.component.html
+++ b/client/src/app/players/player-start/player-start.component.html
@@ -1,1 +1,1 @@
-<p>Please select a song!</p>
+<p class="player-item-item" style="text-align:left; background-color:aliceblue;">Please select a song!</p>
