--- a/client/src/app/about/about/about.component.html
+++ b/client/src/app/about/about/about.component.html
@@ -1,1 +1,84 @@
-<p>about works!</p>
+<div class="container-fluid articles">
+  <div>
+    <div class="container">
+      <br>
+      <h1> About.</h1><br>
+    </div>
+    <div class="container about-item">
+      <h3>Ted Robinson's Angular 17+ Project Test</h3>
+      <div class="row">
+        <div class="d-block d-sm-none col-xs-12">
+          <span>
+          <ol>
+            <li>This site includes a Player with selectable  list of Songs</li>
+            <li>Manage section for fetching and saving items (not available)</li>
+            <li>Login, and Register. (not available)</li>
+            <li>Fooballish, is a simulated football season</li>
+              <ul>
+                <li>Manage Play - Schedule (calendar, will allow picking season start date)</li>
+                  <ol>
+                    <li>Schedule - Will allow  you to pick the start of your 17 week season</li>
+                    <li>Start day - This is 6 days in advance of the first possible game</li>
+                    <li>End Entry - Last day of the week teams will be allowed to be changed</li>
+                    <li>Results day - This is the day the results for the prior week will be available</li>
+                    <li>Week 2... -  Shows when the next start picking day will be start.</li>
+                  </ol>
+                <li>Pick Teams - Will allow the picking of teams (not available)</li>
+              </ul>
+            <li>WhatIf - Manage Teams, Schedule, Pick Teams</li>
+          </ol></span>
+        </div>
+        <div class="d-none d-sm-block col-sm-12">
+          <ol>
+            <li>This site includes a Player with selectable  list of Songs</li>
+            <li>Manage section for fetching and saving items (not available)</li>
+            <li>Login, and Register. (not available)</li>
+            <li>Fooballish, is a simulated football season
+              <ul>
+                <li>Manage Play - Schedule (calendar, will allow picking season start date)</li>
+                  <ol>
+                    <li>Schedule - Will allow  you to pick the start of your 17 week season</li>
+                    <li>Start day - This is 6 days in advance of the first possible game</li>
+                    <li>End Entry - Last day of the week teams will be allowed to be changed</li>
+                    <li>Results day - This is the day the results for the prior week will be available</li>
+                    <li>Week 2... -  Shows when the next start picking of teams day will be start</li>
+                  </ol>
+                <li>Pick Teams - Will allow the picking of teams (not available)</li>
+                <li>Actual Schedule - Date of season is set to the actual NFL Season</li>
+              </ul>
+            </li>
+            <li>TeamMgmt - Manage Teams, Schedule, Pick Teams, Actual Schedule
+              <ul>
+                <li>
+                  This will explain different scenarios for each one these selections
+                </li>
+                <li>
+                  Like what happens when selecting manage teams dropdown on the Fallballish screen
+                </li>
+                <li>
+                  In the manage teams dropdown there are three selections (Schedule, Pick Teams, Actual Schedule )
+                </li>
+                <li>
+                  You will not be able to submit your teams until all teams are selected
+                </li>
+                <li>
+                  These are the team available for a given week
+                </li>
+                <li>
+                  The submit button, once selected, all teams will be refresh.
+                </li>
+                <li>
+                  Then the results of the teams picked  will be shown.
+                </li>
+              </ul>
+            </li>
+            <li>Toybox - Fibonacci, Palindrome, Loan Calculator, Tic Tac Toe, Sudoku - not available</li>
+          </ol>
+        </div>
+      </div>
+      <br><br>
+    </div>
+  </div>
+</div>
+
+
