--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,6 +15,9 @@
               <a routerLink="/players" routerLinkActive="active" class="nav-link">Players</a>
             </li>
             <li class="nav-item">
+              <a routerLink="/player" routerLinkActive="active" class="nav-link" [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">Player</a>
+            </li>
+            <li class="nav-item">
               <a routerLink="/games" routerLinkActive="active" class="nav-link">Games</a>
             </li>
             <li class="nav-item">
@@ -38,7 +41,7 @@
           Wecome {{accountService.currentUser()?.username | titlecase}}
         </a>
         <div *dropdownMenu class="dropdown-menu">
-          <a class="dropdown-item">Edit profile</a>
+          <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
