--- a/client/src/app/players/player-detail/player-detail.component.html
+++ b/client/src/app/players/player-detail/player-detail.component.html
@@ -1,1 +1,7 @@
-<p>player-detail works!</p>
+test detail 2
+<h1>{{player?.description}}</h1>
+@if (player) {
+<div class="col-xs-12 offset-1">
+  <h1>{{ player.description }}</h1>
+</div>
+}
