--- a/client/src/app/players/player-list/player-list.component.css
+++ b/client/src/app/players/player-list/player-list.component.css
@@ -3,7 +3,15 @@
   top: 0px;
   bottom: 0;
   left: 0;
-  width: 95%;
+  width: 30%;
   max-height: 440px;
   overflow-y: scroll;
+}
+.player-list{
+  position: relative;
+  height: 6em;
+}
+.player-item {
+  background-color: aliceblue;
+  background-size: 100% 100% !important;
 }
