--- a/client/src/app/players/player-list/player-list.component.html
+++ b/client/src/app/players/player-list/player-list.component.html
@@ -1,14 +1,27 @@
-<div class="container">
+<div class="container-fluid">
   <hr />
   <app-player-start></app-player-start>
   <hr />
   <div class="row">
-    <div class="col-xs-12" id="left">
-      @for (player of players; track player.id) {
-      <div class="col-2">
-        <p>{{ player.description }}</p>
-      </div>
-      }
+    <div
+      class="col-xs-12 col-sm-2 player-item-item"
+      id="left"
+      style="text-align: left">
+      <a
+        routerLink="index"
+        class="list-group-item clearfix"
+        routerLinkActive="active"
+        style="cursor: pointer"
+      >
+        @for (player of players; track player.id) {
+        <h5 class="list-group-item-heading player-item">
+          {{ player.description }}
+        </h5>
+        }
+      </a>
+    </div>
+    <div class="col-8">
+      <app-player-detail></app-player-detail>
     </div>
   </div>
 </div>
