End of section 9b

--- a/client/src/app/players/player-card/player-card.component.html
+++ b/client/src/app/players/player-card/player-card.component.html
@@ -5,7 +5,7 @@
 >
   <div class="pull-left">
     <h5 class="list-group-item-heading player-item">
-      {{ player().description }}
+      <a routerLink="/players/player/">{{ player().description }}</a>
     </h5>
   </div>
 </a>
