--- a/client/src/app/players/player/player.component.html
+++ b/client/src/app/players/player/player.component.html
@@ -1,8 +1,3 @@
-<div class="container-fluid player">
-  <div class="container" plqyer-item>
-    <div class="row">
-      <app-player-list></app-player-list>
-    </div>
-  </div>
-
-</div>
+<p>
+  player works!2
+</p>
