--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,19 +1,9 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img
-      src="{{ member().photoUrl || './assets/user.png' }}"
-      alt="{{ member().knownAs }}"
-      class="card-img-top"
-    />
+    <img src="{{member().photoUrl || './assets/user.png'}}" alt="{{member().knownAs}}" class="card-img-top">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
-        <button
-          routerLink="/members/{{ member().username }}"
-          routerLinkActive="router-link-active"
-          class="btn btn-primary"
-        >
-          <i class="fa fa-user"></i>
-        </button>
+        <button routerLink="/members/{{member().username}}" routerLinkActive="router-link-active"  class="btn btn-primary"><i class="fa fa-user"></i></button>
       </li>
       <li class="list-inline-item">
         <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
@@ -25,10 +15,9 @@
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user me-2">
-        {{ member().knownAs }}
-      </i>
+      <i class="fa fa-user me-2"></i>
+      {{member().knownAs}}
     </h6>
-    <p class="card-text text-muted text-center">{{ member().city }}</p>
+    <p class="card-text text-muted text-center">{{member().city}}</p>
   </div>
 </div>
