end of section 10

--- a/client/src/app/lotteries/lottery-list/lottery-list.component.html
+++ b/client/src/app/lotteries/lottery-list/lottery-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-2">
-    @for (lottery of lotteries; track lottery.id) {
+    @for (lottery of lotteryService.lotteries(); track lottery.id) {
       <p>{{lottery.lotteryname}}</p>
     }
   </div>
