--- a/client/src/app/players/player/player.component.html
+++ b/client/src/app/players/player/player.component.html
@@ -1,3 +1,9 @@
-<p>
-  player works!2
-</p>
+<p>player works! 2</p>
+<div class="container-fluid player">
+  <hr />
+  <div class="container player-item">
+    <app-player-start></app-player-start>
+  </div>
+  <hr />
+  
+</div>
