End of section 11

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,75 +1,102 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" routerLink="/" >TedsDev App</a>
+    <a class="navbar-brand" routerLink="/">TedsDev App</a>
 
-
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        @if (accountService.currentUser()) {
-            <li class="nav-item">
-              <a routerLink="/about" routerLinkActive="active" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/members" routerLinkActive="active" class="nav-link">Members</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/players" routerLinkActive="active" class="nav-link">Players</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/player" routerLinkActive="active" class="nav-link" [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">Player</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/games" routerLinkActive="active" class="nav-link">Games</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/lotteries" routerLinkActive="active" class="nav-link">Lotteries</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/lists" routerLinkActive="active" class="nav-link">List</a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
-            </li>
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      @if (accountService.currentUser()) {
+      <li class="nav-item">
+        <a routerLink="/about" routerLinkActive="active" class="nav-link"
+          >About</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/members" routerLinkActive="active" class="nav-link"
+          >Members</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/players" routerLinkActive="active" class="nav-link"
+          >Players</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          routerLink="/player"
+          routerLinkActive="active"
+          class="nav-link"
+          [routerLinkActiveOptions]="{ exact: true }"
+          ariaCurrentWhenActive="page"
+          >Player</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/games" routerLinkActive="active" class="nav-link"
+          >Games</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/lotteries" routerLinkActive="active" class="nav-link"
+          >Lotteries</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/lists" routerLinkActive="active" class="nav-link"
+          >List</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/messages" routerLinkActive="active" class="nav-link"
+          >Messages</a
+        >
+      </li>
       }
       <li class="nav-item">
-        <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+        <a routerLink="/errors" routerLinkActive="active" class="nav-link"
+          >Errors</a
+        >
       </li>
-      </ul>
+    </ul>
 
     @if (accountService.currentUser()) {
-      <div dropdown class="dropdown">
-        <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
-          Wecome {{accountService.currentUser()?.username | titlecase}}
-        </a>
-        <div *dropdownMenu class="dropdown-menu">
-          <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" (click)="logout()">Logout</a>
-        </div>
+    <div dropdown class="dropdown">
+      <img
+        class="me-2"
+        src="{{
+          accountService.currentUser()?.photoUrl || './assets/img/user.png'
+        }}"
+        alt="user main imgage"
+      />
+      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+        Wecome {{ accountService.currentUser()?.username | titlecase }}
+      </a>
+      <div *dropdownMenu class="dropdown-menu">
+        <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
-    }
-
-    @if (!accountService.currentUser()) {
-      <form
-        #loginForm="ngForm"
-        (ngSubmit)="login()"
-        class="d-flex"
-        autocomplete="off"
-      >
-        <input
-          name="username"
-          [(ngModel)]="model.username"
-          class="form-control me-2"
-          placeholder="Username"
-        />
-        <input
-          name="password"
-          [(ngModel)]="model.password"
-          class="form-control me-2"
-          placeholder="Password"
-          type="password"
-        />
-        <button class="btn btn-success" type="submit">Login</button>
-      </form>
+    </div>
+    } @if (!accountService.currentUser()) {
+    <form
+      #loginForm="ngForm"
+      (ngSubmit)="login()"
+      class="d-flex"
+      autocomplete="off"
+    >
+      <input
+        name="username"
+        [(ngModel)]="model.username"
+        class="form-control me-2"
+        placeholder="Username"
+      />
+      <input
+        name="password"
+        [(ngModel)]="model.password"
+        class="form-control me-2"
+        placeholder="Password"
+        type="password"
+      />
+      <button class="btn btn-success" type="submit">Login</button>
+    </form>
     }
   </div>
 </nav>
