--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -94,7 +94,12 @@
           </div>
         </form>
       </tab>
-      <tab heading="Edit photos"> photo edit will go here </tab>
+      <tab heading="Edit photos">
+        <app-photo-editor
+          [member]="member"
+          (memberChange)="onMemberChange($event)"
+          ></app-photo-editor>
+      </tab>
     </tabset>
   </div>
 </div>
