--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img src="{{member().photoUrl || './assets/user.png'}}" alt="{{member().knownAs}}" class="card-img-top">
+    <img src="{{member().photoUrl || './assets/img/user.png'}}" alt="{{member().knownAs}}" class="card-img-top">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button routerLink="/members/{{member().username}}" routerLinkActive="router-link-active"  class="btn btn-primary"><i class="fa fa-user"></i></button>
