--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -16,7 +16,7 @@
   <div class="col-4">
     <div class="card">
       <img
-        src="{{ member.photoUrl || './assets/user.png' }}"
+        src="{{ member.photoUrl || './assets/img/user.png' }}"
         alt="{{ member.knownAs }}"
         class="card-img img-thumbnail"
       />
