End of section 14

--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -4,7 +4,7 @@
   <p class="font-weight-bold">Note: If you are seeing this error then angular is not to blame!</p>
   <p>Whar to do next?</p>
   <ol>
-    <li>Open chrome dev tools and chec the failing network request in the network tab</li>
+    <li>Open chrome dev tools and check the failing network request in the network tab</li>
     <li>Examine the URl of the failing request</li>
     <li>Reproduce the error in postman -if you can reproduce the error then angular is not to blame </li>
   </ol>
