--- a/client/src/app/players/player/player-start/player-start.component.html
+++ b/client/src/app/players/player/player-start/player-start.component.html
@@ -1,3 +1,9 @@
-<hr />
-  Please select a song! (p-start works 2)
-<hr />
+<div class="container">
+  <div class="flex flex-wrap">
+    <div class="col-12" style="background-color: aqua">
+      <hr/>
+      Please Select a player: -p-start
+      <hr/>
+    </div>
+  </div>
+</div>
