--- a/client/src/app/players/player/player.component.html
+++ b/client/src/app/players/player/player.component.html
@@ -1,9 +1,8 @@
-<p>player works! 2</p>
 <div class="container-fluid player">
-  <hr />
-  <div class="container player-item">
+  <div class="col-12" style="background-color: aqua">
+    <hr />
     <app-player-start></app-player-start>
+
+    <app-player-list></app-player-list>
   </div>
-  <hr />
-  
 </div>
