--- a/client/src/app/members/member-card/member-card.component.css
+++ b/client/src/app/members/member-card/member-card.component.css
@@ -2,6 +2,7 @@
   transform: scale(1.2,1.2);
   transition-duration: 500ms;
   transition-timing-function: ease-out;
+  opacity: 0.7;
 }
 
 .card img {
@@ -20,8 +21,8 @@
   bottom: -30%;
   left: 0;
   right: 0;
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
   opacity: 0;
 }
 
