--- a/client/src/app/players/player/player-detail/player-detail.component.html
+++ b/client/src/app/players/player/player-detail/player-detail.component.html
@@ -1,21 +1,1 @@
-@if (player) {
-  <div class="row">
-    <div class="col-4">
-      <div class="card">
-        <div class="card-body">
-          <div>
-            <strong>
-
-            </strong>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="col-8">
-    
-  </div>
-
-}
+<hr>test p-display {{player?.description}} no desc
