--- a/client/src/app/players/player/player-list/player-list.component.css
+++ b/client/src/app/players/player/player-list/player-list.component.css
@@ -2,7 +2,7 @@
   position: relative;
   top: 0px;
   bottom: 0;
-  left: 0;
+  left: 5px;
   width: 30%;
   max-height: 440px;
   overflow-y: scroll;
@@ -12,6 +12,6 @@
   height: 6em;
 }
 .player-item {
-  background-color: aliceblue;
+  background-color: yellow;
   background-size: 100% 100% !important;
 }
