--- a/client/src/app/players/player/player-list/player-list.component.html
+++ b/client/src/app/players/player/player-list/player-list.component.html
@@ -1,9 +1,15 @@
 <div class="container-fluid">
-  <app-player-start></app-player-start>
-  <p>player-list works! (p-list works 2)</p>
   <div class="row">
-    @for (player of playerService.players(); track player.id) {
-      <div class="col-xs-4"></div>
-    }
+    <div class="col-4" style="background-color: yellow">
+      @for (player of playerService.players(); track player.id) {
+      <div class="list-group-item-heading player-item" routerLink="{{player.description}}" >
+        {{ player.description }}
+      </div>
+      }
+    </div>
+    <div class="col-8" style="background-color: bisque">
+      <router-outlet></router-outlet>player-list works! (p-list works 2) test2
+      <app-player-detail></app-player-detail>
+    </div>
   </div>
 </div>
