--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,26 +1,44 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img src="{{member().photoUrl || './assets/img/user.png'}}" alt="{{member().knownAs}}" class="card-img-top">
+    <img
+      src="{{ member().photoUrl || './assets/img/user.png' }}"
+      alt="{{ member().knownAs }}"
+      class="card-img-top"
+    />
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
-        <button routerLink="/members/{{member().username}}" routerLinkActive="router-link-active"  class="btn btn-primary"><i class="fa fa-user"></i></button>
+        <button
+          routerLink="/members/{{ member().username }}"
+          routerLinkActive="router-link-active"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-user"></i>
+        </button>
       </li>
       <li class="list-inline-item">
-        <button (click)="toggleLike()" class="btn btn-primary"><i class="fa fa-heart"></i></button>
+        <button (click)="toggleLike()" class="btn btn-primary">
+          <i class="fa fa-heart"></i>
+        </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+        <button
+          routerLink="/members/{{ member().username }}"
+          [queryParams]="{ tab: 'Messages' }"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-envelope"></i>
+        </button>
       </li>
     </ul>
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
       <i class="fa fa-user me-2"></i>
-      {{member().knownAs}}, {{member().age}}
+      {{ member().knownAs }}, {{ member().age }}
       @if (hasLiked()) {
-        <i class="fa fa-heart ms-2" style="color: red"></i>
+      <i class="fa fa-heart ms-2" style="color: red"></i>
       }
     </h6>
-    <p class="card-text text-muted text-center">{{member().city}}</p>
+    <p class="card-text text-muted text-center">{{ member().city }}</p>
   </div>
 </div>
