End of section 16

--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -2,7 +2,7 @@
 @if (error) {
   <h5 class="text-danger">Error: {{error.message}}</h5>
   <p class="font-weight-bold">Note: If you are seeing this error then angular is not to blame!</p>
-  <p>Whar to do next?</p>
+  <p>What to do next?</p>
   <ol>
     <li>Open chrome dev tools and check the failing network request in the network tab</li>
     <li>Examine the URl of the failing request</li>
