--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -49,6 +49,11 @@
           >Messages</a
         >
       </li>
+      <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
+        <a routerLink="/admin" routerLinkActive="active" class="nav-link"
+          >Admin</a
+        >
+      </li>
       }
       <li class="nav-item">
         <a routerLink="/errors" routerLinkActive="active" class="nav-link"
