End of Section 18 with players updated

--- a/client/src/app/players/player-card/player-card.component.html
+++ b/client/src/app/players/player-card/player-card.component.html
@@ -1,11 +1,15 @@
-<a
+<!-- <a
   class="list-group-item clearfix"
   routerLinkActive="active"
   style="cursor: pointer"
 >
   <div class="pull-left">
     <h5 class="list-group-item-heading player-item">
-      <a routerLink="/players/player/">{{ player().description }}</a>
+      <a routerLink="/players/player/">{{ player().description }} t</a>
     </h5>
   </div>
-</a>
+</a> -->
+<p>player card</p>
+<app-player-list></app-player-list>
+
+
