--- a/client/src/app/testThis/testT-start/testT-start.component.html
+++ b/client/src/app/testThis/testT-start/testT-start.component.html
@@ -1,9 +1,9 @@
 <div class="container">
+  <hr/>
   <div class="flex flex-wrap">
     <div class="col-12" style="background-color: aqua">
-      <hr/>
-      Please Select a player: -p-start
-      <hr/>
+      Please Select a song: -testT-start
     </div>
   </div>
+  <hr/>
 </div>
