--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -20,16 +20,6 @@
         >
       </li>
       <li class="nav-item">
-        <a
-          routerLink="/player"
-          routerLinkActive="active"
-          class="nav-link"
-          [routerLinkActiveOptions]="{ exact: true }"
-          ariaCurrentWhenActive="page"
-          >Player</a
-        >
-      </li>
-      <li class="nav-item">
         <a routerLink="/games" routerLinkActive="active" class="nav-link"
           >Games</a
         >
@@ -45,8 +35,21 @@
         >
       </li>
       <li class="nav-item">
-        <a routerLink="/messages" routerLinkActive="active" class="nav-link"
+        <a
+          routerLink="/messages"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="nav-link"
           >Messages</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          routerLink="/testThis"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="nav-link"
+          >Tester</a
         >
       </li>
       <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
@@ -66,11 +69,13 @@
     <div dropdown class="dropdown">
       <img
         class="me-2"
-        src="{{accountService.currentUser()?.photoUrl || './assets/img/user.png'}}"
+        src="{{
+          accountService.currentUser()?.photoUrl || './assets/img/user.png'
+        }}"
         alt="user main imgage"
       />
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
-        Wecome {{accountService.currentUser()?.knownAs}}
+        Wecome {{ accountService.currentUser()?.knownAs }}
       </a>
       <div *dropdownMenu class="dropdown-menu">
         <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
