--- a/client/src/app/testThis/testThis.component.css
+++ b/client/src/app/testThis/testThis.component.css
@@ -11,19 +11,16 @@
   position: relative;
   height: 6em;
 }
-.player {
-  background-image: url('/assets/img/coolmusic.jpg');
-  background-repeat: no-repeat;
-  background-size:100% 100%!important;
-  height:45em;
-  overflow-x: hidden;
-}
-.player-card {
-  position: relative;
-  height: .6em;
-}
-
 .player-item {
   background-color: aliceblue;
+
   background-size: 100% 100% !important;
+}
+
+.testThis {
+  background-image: url("/assets/img/coolmusic.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100% !important;
+  height: 45em;
+  overflow-x: hidden;
 }
