--- a/client/src/app/admin/admin-panel/admin-panel.component.html
+++ b/client/src/app/admin/admin-panel/admin-panel.component.html
@@ -1,6 +1,6 @@
 <h2>Admin panel</h2>
 <div class="tab-panel">
-  <tabset class="member-tabs">
+  <tabset class="member-tabset">
     <tab heading="User management" *appHasRole="['Admin']">
       <div class="container">
         <app-user-management></app-user-management>
@@ -8,12 +8,7 @@
     </tab>
     <tab heading="Photo management" *appHasRole="['Admin', 'Moderator']">
       <div class="container">
-        <app-photo-management></app-photo-management>
-      </div>
-    </tab>
-    <tab heading="Helper management" *appHasRole="['Admin', 'Helper']">
-      <div class="container">
-        <app-helper-management></app-helper-management>
+        <!-- <app-photo-management></app-photo-management> -->
       </div>
     </tab>
   </tabset>
