--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -35,29 +35,20 @@
         >
       </li>
       <li class="nav-item">
-        <a
-          routerLink="/messages"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          class="nav-link"
+        <a routerLink="/messages" routerLinkActive="active" class="nav-link"
           >Messages</a
         >
       </li>
-      <li class="nav-item">
+      <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
         <a
-          routerLink="/testThis"
+          routerLink="/admin"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           class="nav-link"
-          >Tester</a
-        >
-      </li>
-      <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
-        <a routerLink="/admin" routerLinkActive="active" class="nav-link"
           >Admin</a
         >
       </li>
-      }
+    }
       <li class="nav-item">
         <a routerLink="/errors" routerLinkActive="active" class="nav-link"
           >Errors</a
