End of section 18 Photo

--- a/client/src/app/admin/admin-panel/admin-panel.component.html
+++ b/client/src/app/admin/admin-panel/admin-panel.component.html
@@ -8,7 +8,7 @@
     </tab>
     <tab heading="Photo management" *appHasRole="['Admin', 'Moderator']">
       <div class="container">
-        <!-- <app-photo-management></app-photo-management> -->
+        <app-photo-management></app-photo-management>
       </div>
     </tab>
   </tabset>
