--- a/client/src/app/members/photo-editor/photo-editor.component.html
+++ b/client/src/app/members/photo-editor/photo-editor.component.html
@@ -1,54 +1,62 @@
 <div class="row">
-  @for (photo of member().photos; track photo.id) {
-  <div class="col-2 img-wrapper">
+  <div class="col-2 mb-1 img-wrapper" *ngFor="let photo of member?.photos">
     <img
       src="{{ photo.url }}"
       alt="photo of user"
       class="img-thumbnail mb-1"
       [class.not-approved]="!photo.isApproved"
     />
-    @if(!photo.isApproved) {
-    <div class="text-center img-text">
+    <div class="text-center img-text" *ngIf="!photo.isApproved">
       <span class="text-danger">Awaiting approval</span>
     </div>
-    }
     <div class="text-center">
       <button
         class="btn btn-sm me-1"
         [disabled]="photo.isMain || !photo.isApproved"
         (click)="setMainPhoto(photo)"
         [ngClass]="photo.isMain ? 'btn-success active' : 'btn-outline-success'"
-      >Main</button>
+      >
+        Main
+      </button>
       <button
         class="btn btn-sm btn-danger"
         [disabled]="photo.isMain"
         (click)="deletePhoto(photo)"
-      ><i class="fa fa-trash"></i></button>
+      >
+        <i class="fa fa-trash"></i>
+      </button>
     </div>
   </div>
-  }
 </div>
-
 <!-- ng file upload -->
 
 <div class="row mt-5">
-
   <div class="col-md-3">
-
     <h3>Add Photos</h3>
 
-    <div ng2FileDrop
+    <div
+      ng2FileDrop
       [ngClass]="{ 'nv-file-over': hasBaseDropZoneOver }"
       (fileOver)="fileOverBase($event)"
       [uploader]="uploader"
-      class="card bg-faded p-5 text-center my-drop-zone">
+      class="card bg-faded p-5 text-center my-drop-zone"
+    >
       <i class="fa fa-upload fa-3x"></i>
       Drop Photos here
     </div>
+
+    Multiple
+    <input type="file" ng2FileSelect [uploader]="uploader" multiple /><br />
+
+    Single
+    <input type="file" ng2FileSelect [uploader]="uploader" />
   </div>
 
-  <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
-
+  <div
+    class="col-md-9"
+    style="margin-bottom: 40px"
+    *ngIf="uploader?.queue?.length"
+  >
     <h3>Upload queue</h3>
     <p>Queue length: {{ uploader?.queue?.length }}</p>
 
@@ -61,8 +69,12 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of uploader?.queue">
-          <td><strong>{{ item?.file?.name }}</strong></td>
-          <td *ngIf="uploader?.options?.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:".2"}}MB</td>
+          <td>
+            <strong>{{ item?.file?.name }}</strong>
+          </td>
+          <td *ngIf="uploader?.options?.isHTML5" nowrap>
+            {{ item?.file?.size / 1024 / 1024 | number : ".2" }}MB
+          </td>
         </tr>
       </tbody>
     </table>
@@ -71,23 +83,37 @@
       <div>
         Queue progress:
         <div class="progress">
-          <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader?.progress + '%' }"></div>
+          <div
+            class="progress-bar"
+            role="progressbar"
+            [ngStyle]="{ width: uploader?.progress + '%' }"
+          ></div>
         </div>
       </div>
-      <button type="button" class="btn btn-success btn-s"
-          (click)="uploader?.uploadAll()" [disabled]="!uploader?.getNotUploadedItems()?.length">
+      <button
+        type="button"
+        class="btn btn-success btn-s"
+        (click)="uploader?.uploadAll()"
+        [disabled]="!uploader?.getNotUploadedItems()?.length"
+      >
         <span class="fa fa-upload"></span> Upload all
       </button>
-      <button type="button" class="btn btn-warning btn-s"
-              (click)="uploader?.cancelAll()" [disabled]="!uploader?.isUploading">
+      <button
+        type="button"
+        class="btn btn-warning btn-s"
+        (click)="uploader?.cancelAll()"
+        [disabled]="!uploader?.isUploading"
+      >
         <span class="fa fa-ban"></span> Cancel all
       </button>
-      <button type="button" class="btn btn-danger btn-s"
-              (click)="uploader?.clearQueue()" [disabled]="!uploader?.queue?.length">
-          <span class="fa fa-trash"></span> Remove all
+      <button
+        type="button"
+        class="btn btn-danger btn-s"
+        (click)="uploader?.clearQueue()"
+        [disabled]="!uploader?.queue?.length"
+      >
+        <span class="fa fa-trash"></span> Remove all
       </button>
     </div>
-
   </div>
-
 </div>
