Completed prior to Publishing

--- a/client/src/app/players/player-detail/player-detail.component.html
+++ b/client/src/app/players/player-detail/player-detail.component.html
@@ -1,4 +1,4 @@
-@if (player) {
+<!-- @if (player) {
 <p>>
   {{ player.description }} {{ player.id }}
   <youtube-player
@@ -11,3 +11,4 @@
 <div><router-outlet></router-outlet> test p-display no desc {{ player }}</div>
 
 }
+ -->
