--- a/client/src/app/players/player-list/playerdetail/playerdetail.component.html
+++ b/client/src/app/players/player-list/playerdetail/playerdetail.component.html
@@ -23,5 +23,5 @@
   </youtube-player>
 </div> -->
 } @else{
-<div>playerdetail no player selected {{ player }}</div>
+<div>no player selected {{ player }}</div>
 }
