--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -6,7 +6,7 @@
     <ul
       class="chat"
       #scrollMe
-      style="overflow: scroll; max-height: 500px; scroll-behavior: smooth;"
+      style="overflow: scroll; max-height: 500px; scroll-behavior: smooth"
     >
       @for (message of messageService.messageThread(); track message.id) {
       <li>
@@ -21,16 +21,21 @@
           <div class="chat-body">
             <div class="header">
               <small class="text-muted">
-                <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
-                @if (!message.dateRead && message.senderUsername !== username()) {
-                  <span class="text-danger">(unread)</span>
-                }
-                @if (message.dateRead && message.senderUsername !== username()) {
-                  <span class="text-success">(read {{message.dateRead | timeago}})</span>
+                <span class="fa fa-clock-o">{{
+                  message.messageSent | timeago
+                }}</span>
+                @if (!message.dateRead && message.senderUsername !== username())
+                {
+                <span class="text-danger">(unread)</span>
+                } @if (message.dateRead && message.senderUsername !==
+                username()) {
+                <span class="text-success"
+                  >(read {{ message.dateRead | timeago }})</span
+                >
                 }
               </small>
             </div>
-            <p>{{message.content}}</p>
+            <p>{{ message.content }}</p>
           </div>
         </div>
       </li>
@@ -43,14 +48,23 @@
     <form #messageForm="ngForm" (ngSubmit)="sendMessage()">
       <div class="input-group">
         <input
-            name="messageContent"
-            required
-            [(ngModel)]="messageContent"
-            type="text"
-            class="form-control input-sm"
-            placeholder="Send a private message">
+          name="messageContent"
+          required
+          [(ngModel)]="messageContent"
+          type="text"
+          class="form-control input-sm"
+          placeholder="Send a private message"
+        />
         <div class="input-group-append">
-          <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
+          <button
+            [disabled]="!messageForm.valid"
+            class="btn btn-primary"
+            type="submit"
+          >
+            Send @if(loading) {
+              <i class="fa fa-spinner fa-spin"></i>
+            }
+          </button>
         </div>
       </div>
     </form>
