--- a/client/src/app/players/player-start/player-start.component.html
+++ b/client/src/app/players/player-start/player-start.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="flex flex-wrap">
     <div class="col-12" style="background-color: aqua">
-      Please Select a player: -pl-start
+      Please Select a player: -player-start
     </div>
   </div>
 </div>
