--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -22,7 +22,7 @@
       </li>
       <li class="list-inline-item">
         <button
-          routerLink="/members/{{ member().username }}"
+          routerLink="/members/{{ member().id}}"
           [queryParams]="{ tab: 'Messages' }"
           class="btn btn-primary"
         >
