--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@plugin "daisyui";
+
 .tab-panel {
   border: 1px solid #ddd;
   padding: 10px;
